# vibetunnel

./: .gitignore  .mailmap  .watchmanconfig  AGENT.md  AGENTS.md  ANDROID_KEYBOARD_FIX.md  CHANGELOG.md  CLAUDE.md  ISSUES_VERIFICATION.md  PR_DESCRIPTION.md  README.md  appcast-prerelease.xml  docs.json  poltergeist.config.json  pr300.diff
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  claude.yml  ios.yml  mac.yml  nightly.yml  node.yml  npm-test.yml  playwright.yml  release.yml  run-gemini-cli.yml  rust-native-pty-tests.yml  rust-vibetunnel-pty-tests.yml  web-ci.yml
VibeTunnel.xcworkspace/: contents.xcworkspacedata
apple/: .swiftformat  .swiftlint.yml
apple/logging/: README.md  VibeTunnel-Logging.mobileconfig
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INDEX.md  architecture-mario.md  authentication.md  build-system.md  cjk-ime-input.md  development.md  files.md  hq.md  ios-spec.md  linux.md  macos-quickstart-implementation.md  macos-websocket-removal-guide.md  npm-release.md  openapi.md  project-overview.md  push-impl.md  push-notification.md  repoprompt.md  sockets.md  spec.md  testing.md  unified-notifications-test-plan.md  websocket.md  zig.md
docs/core/: api-reference.md  architecture.md  protocols.md
docs/features/: authentication.md
docs/guides/: development.md  quickstart.md  testing.md
docs/platform/: macos.md  web.md
docs/reference/: release-process.md
ios/: Package.swift  README.md  conversion.md
ios/VibeTunnel/: Shared.xcconfig  version.xcconfig
ios/VibeTunnel-iOS.xcodeproj/: project.pbxproj
ios/VibeTunnelTests/: APIErrorTests.swift  AuthenticationTests.swift  EdgeCaseTests.swift  FileSystemTests.swift  PerformanceTests.swift  SessionListViewModelTests.swift  StandaloneTests.swift  TerminalParsingTests.swift  WebSocketReconnectionTests.swift
ios/scripts/: common.sh  quick-test.sh  vtlog.sh
mac/: CLAUDE.md  Package.swift  README.md  package-lock.json  package.json
mac/VibeTunnel/: VibeTunnelApp.swift  version.xcconfig
mac/VibeTunnel-Mac.xcodeproj/: project.pbxproj
mac/VibeTunnel.xcodeproj/: project.pbxproj
mac/VibeTunnelTests/: AppleScriptExecutorTests.swift  CLIInstallerTests.swift  CloudflareServiceTests.swift  DashboardKeychainTests.swift  GitRepositoryMonitorRaceConditionTests.swift  ModelTests.swift  NgrokServiceTests.swift  NotificationServiceClaudeTurnTests.swift  NotificationServiceTests.swift  PathSplittingTests.swift  ProcessLifecycleTests.swift  ServerEventTests.swift  ServerManagerTests.swift  SessionIdHandlingTests.swift  SessionMonitorTests.swift  SystemControlHandlerTests.swift  TailscaleFallbackRegressionTests.swift  TerminalLaunchTests.swift  TerminalManagerTests.swift  TunnelSessionTests.swift  WsV3SocketClientFrameTests.swift  WsV3SocketClientRequestTests.swift
mac/scripts/: build-web-frontend.sh  build.sh  check-xcode-settings.sh  codesign-app.sh  common.sh  copy-bun-executable.sh  create-dmg.sh  create-zip.sh  download-bun-binaries.sh  preflight-check.sh  release.sh  setup-bun-prebuilts.sh
native/vt-fwd/: build.zig
poltergeist-improvements/: IMPROVEMENTS_SUMMARY.md  enhanced-cli-init.ts  enhanced-init.test.ts
poltergeist-tests/: init-command-xcode.test.ts
scripts/: restart-mac.sh
web/: .dockerignore  .gitignore  .oxlintrc.json  .pnpmfile.cjs  CLAUDE.md  Dockerfile  Dockerfile.test-beta15  Dockerfile.test-beta15-full  NOTIFICATION_DEBUG_SUMMARY.md  README.md  build-native.js  docker-compose.yml  index.html  package.json  package.npm.json  playwright.config.fast.ts  playwright.config.ts  pnpm-lock.yaml  start-express-simple.sh  tailwind.config.js  terminal-debug.md  test-beta15-full.js  test-beta15-full.sh  test-beta15-package.sh  test-beta15-simple.sh  test-capture-debug.js  test-capture-direct.mjs  test-capture-flow.js  test-capture.webm  test-display-capture.js  test-ffmpeg-direct-final.js  test-ffmpeg-direct.sh  test-ffmpeg-stream.js  test-final-debug.js  test-linux-screenshare-capture.js  test-linux-screenshare-debug.js  test-linux-screenshare-final.js  test-linux-screenshare-simple.js  test-linux-screenshare.js  test-npm-beta.sh  (+18 more)
web/.claude/: settings.local.json
web/ci-artifacts/: index.html
web/docs/: asciicast-pruning.md  asciinema-truncation.md  linux-input-control-guide.md  linux-permissions-guide.md  linux-screencap.md  multiplexer-integration.md  plan.md  playwright-testing.md  rust-pty-implementation.md  spec.md  tailwind.md  windows-linux-plan.md  (+2 more)
web/native-pty/: .gitignore  Cargo.toml  Makefile  README.md  index.d.ts  index.js  package.json  test.js
web/native-pty/.github/workflows/: rust-tests.yml
web/native-pty/benches/: activity_detector.rs
web/native-pty/src/: lib.rs
web/native-pty/tests/: README.md  activity_detector.rs  integration.rs  pty_basic.rs  pty_io.rs
web/vibetunnel-pty/: Cargo.toml  Makefile  build.rs  index.d.ts  index.js  package.json  vibetunnel-pty.darwin-arm64.node
web/vibetunnel-pty/crates/core/: Cargo.toml  TESTING.md
web/vibetunnel-pty/crates/core/src/: activity.rs  activity_tests.rs  lib.rs  mod.rs  protocol.rs  protocol_tests.rs  pty.rs  pty_tests.rs  session.rs  session_tests.rs
web/vibetunnel-pty/crates/core/tests/: integration_tests.rs
web/vibetunnel-pty/crates/napi-addon/: Cargo.toml  package.json
web/vibetunnel-pty/crates/napi-addon/src/: bindings.rs  lib.rs  manager.rs  mod.rs
web/vibetunnel-pty/crates/vt-pipe/: Cargo.toml
web/vibetunnel-pty/crates/vt-pipe/src/: forwarder.rs  lib.rs  main.rs  session_store.rs  socket_client.rs  terminal.rs
web/vibetunnel-pty/crates/vt-pipe/tests/: cli_tests.rs
web/vibetunnel-pty/src/: lib.rs
web/vibetunnel-pty/src/cli/: forwarder.rs  main.rs  mod.rs  session_store.rs  socket_client.rs  terminal.rs
web/vibetunnel-pty/src/core/: activity.rs  mod.rs  protocol.rs  pty.rs  session.rs
web/vibetunnel-pty/src/napi/: bindings.rs  manager.rs  mod.rs
web/vibetunnel-pty/test/: napi-addon.test.js
web/vt-pipe/: .clippy.toml  Cargo.toml  Makefile  README.md  rustfmt.toml
web/vt-pipe/src/: api_client.rs  forwarder.rs  main.rs  session.rs  socket_client.rs  terminal.rs
(+631 files in other folders)
