[package]
name = "vt-pipe"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
publish = false

[[bin]]
name = "vt-pipe"
path = "src/main.rs"

[dependencies]
vibetunnel-pty-core = { path = "../core", features = ["cli"] }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
portable-pty = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
termios = { workspace = true }
nix = { workspace = true }